<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_send_money_drawable_"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/agent_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        style="@style/TextAppearance.ELarge"
        android:text="@string/title_AgentSearch"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/agent_search_edit_state"
        android:background="@drawable/itemsodescription"
        android:layout_below="@+id/agent_search_title"
        android:paddingLeft="10dp"
        android:layout_margin="10dp"
        android:hint="@string/hintedittext_State"
        android:gravity="center_vertical"
        android:drawableRight="@drawable/arrow_right"
        android:textColorHint="@color/black"
        />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/agent_search_edit_city"
        android:background="@drawable/itemsodescription"
        android:layout_below="@+id/agent_search_edit_state"
        android:layout_margin="10dp"
        android:hint="@string/hintedittext_City"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:drawableRight="@drawable/arrow_right"
        android:textColorHint="@color/black"
        />

    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/agent_search_buttonSearch"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/agent_search_edit_city"
        android:layout_margin="10dp"
        android:text="@string/button_search"
        android:padding="10dp"
        android:gravity="center_vertical|center_horizontal"
        />
    
</RelativeLayout>