<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sale_agent_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:text="Sale Agent Title"
            android:textColor="#ff000000"
            android:textSize="18.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_address"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="Loram ipsum Loram ipsum Loram ipsum Loram ipsum Loram ipsum"
                android:textColor="@color/black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_service"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_bus_service_benifits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="Air condition,Towel,Lunch"
                android:textColor="@color/black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_telprefix_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teleprefix"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_tel_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:text="95450048535/52436172/93673284/287376343"
                android:textColor="@color/black"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="10000"
                android:textColor="@color/black"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_seat"
                android:textColor="@color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/sale_agent_bus_seat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3.0dip"
                android:text="50"
                android:textColor="@color/black"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/divider"
            android:orientation="vertical" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="35.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" >

                <RelativeLayout
                    android:id="@+id/btn_sale_agent_call"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_gray"
                    android:clickable="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" >

                        <ImageView
                            android:id="@+id/animate_splash"
                            android:layout_width="25.0dip"
                            android:layout_height="17.0dip"
                            android:layout_marginTop="1.0dip"
                            android:paddingRight="5.0dip"
                            android:src="@drawable/call" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/divider" />

                <RelativeLayout
                    android:id="@+id/btn_sale_agent_send_sms"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_gray"
                    android:clickable="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="27.0dip"
                            android:layout_height="20.0dip"
                            android:layout_marginTop="1.0dip"
                            android:paddingRight="7.0dip"
                            android:src="@drawable/email" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="1.0dip"
                            android:text="@string/send_sms"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/divider" />

                <RelativeLayout
                    android:id="@+id/btn_sale_agent_buy"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_gray"
                    android:clickable="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="27.0dip"
                            android:layout_height="20.0dip"
                            android:layout_marginTop="1.0dip"
                            android:paddingRight="7.0dip"
                            android:src="@drawable/buy" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="1.0dip"
                            android:text="@string/buy_now"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:background="@color/actionbar_shape"
            android:orientation="vertical" />
    </LinearLayout>

</RelativeLayout>